[tool.poetry]
name = "user-api"
version = "0.1.0"
description = ""
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.52.0"}
uvicorn = "^0.11.3"
schemathesis = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = ">=5"
hypothesis = "^5.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
